--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <input class="textbox" type="text" id="iterations" placeholder="Number of iterations to calculate">  
     <label id="statusLabel">Status: Idle</label>
     <button type="button" onclick="drawGraph()">Graph</button>
+    <input type="checkbox" id="isDynamic">
     <button type="button" onclick="newEquation()">New</button>
     <div id="graph-container">
         <canvas id="graph"></canvas>
