oh shit it borken

--- a/index.html
+++ b/index.html
@@ -1,37 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DDCGrapher - By [tyuXX]</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="sidebar">
-    <h2>Equations</h2>
-    <div id="equation-container">
-      <input class="equationtbox" type="text" id="equation1" placeholder="Enter your equation here (e.g. sin(x) + x^2)">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DDCGrapher - By [tyuXX]</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="sidebar">
+      <h2>Equations</h2>
+      <div id="equation-container">
+        <input
+          class="equationtbox"
+          type="text"
+          id="equation1"
+          placeholder="Enter your equation here (e.g. sin(x) + x^2)"
+        />
+      </div>
     </div>
-  </div>
 
-  <div id="main-content">
-    <img src="https://komarev.com/ghpvc/?username=ddcgrapher&label=DDCGrapher&color=0e75b6&style=flat" alt="tyuxx" /> </p>
-  <h1>DDCGrapher made by [tyuXX]</h1>
-  <h2 id="statusLabel">Status: Idle</h2>
-    <input class="textbox" type="text" id="xLength" placeholder="X-axis Length">
-    <input class="textbox" type="text" id="yLength" placeholder="Y-axis Length">
-    <input class="textbox" type="text" id="iterations" placeholder="Number of iterations to calculate"> 
-    <label>Dynamic Graph Toggle =></label>
-    <input type="checkbox" id="isDynamic">
-    <button type="button" onclick="drawGraph()">Graph</button>
-    <button type="button" onclick="newEquation()">New Equation</button>
-    <button type="button" onclick="ExportGraph()">Export as PNG file</button>
-    <div id="graph-container">
-      <canvas id="graph"></canvas>
+    <div id="main-content">
+      <img
+        src="https://komarev.com/ghpvc/?username=ddcgrapher&label=DDCGrapher&color=0e75b6&style=flat"
+        alt="tyuxx"
+      />
+      <h1>DDCGrapher made by [tyuXX]</h1>
+      <h2 id="statusLabel">Status: Idle</h2>
+      <input
+        class="textbox"
+        type="text"
+        id="xLength"
+        placeholder="X-axis Length"
+      />
+      <input
+        class="textbox"
+        type="text"
+        id="yLength"
+        placeholder="Y-axis Length"
+      />
+      <input
+        class="textbox"
+        type="text"
+        id="iterations"
+        placeholder="Number of iterations to calculate"
+      />
+      <label>Dynamic Graph Toggle =></label>
+      <input type="checkbox" id="isDynamic" />
+      <button type="button" onclick="drawGraph()">Graph</button>
+      <button type="button" onclick="newEquation()">New Equation</button>
+      <button type="button" onclick="ExportGraph()">Export as PNG file</button>
+      <div id="graph-container">
+        <canvas id="graph"></canvas>
+      </div>
     </div>
-  </div>
 
-  <script src="math.js" type="text/javascript"></script>
-  <script src="script.js" type="text/javascript"></script>
-</body>
+    <script src="math.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
+  </body>
 </html>
