aatccc- last release todo lot

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DDCGrapher - By [tyuXX]</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="math.js" type="text/javascript"></script>
+    <script src="zip.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="sidebar">
@@ -66,8 +68,6 @@
         <canvas id="graph"></canvas>
       </div>
     </div>
-
-    <script src="math.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
