--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </button>
       <h2>Equations</h2>
       <button type="button" onclick="newEquation()">New Equation</button>
+      <button type="button" onclick="clearEquations()">Clear Equations</button>
       <h6 class="spacing"></h6>
       <div id="equation-container">
         <input
