--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         id="yLength"
         placeholder="Y-axis Length"
       />
+      <input type="checkbox" id="fixScaling" title="Fix the scaling of the graph to the screen size" />
       <input
         class="textbox"
         type="text"
