--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       <button type="button" onclick="ImportGraphText()">
         Import from .txt
       </button>
+      <button type="button" onclick="ExportToRefLink()">
+        Export as a link
+      </button>
       <div id="graph-container">
         <canvas id="graph"></canvas>
       </div>
