--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       >>
     </button>
     <button onclick="ThemeToggle()" id="themeButton">Set theme</button>
+    <a rel="stylesheet" href="https://github.com/tyuXX/DDCGrapherJS/issues" >For issues</a>
     <div id="main-content">
       <h2>DDCGrapher made by [tyuXX]</h2>
       <h2 id="statusLabel">Status: Idle</h2>
